--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: lavender;
-    font-family: 'Courier New', Courier, monospace;
-    color: blueviolet;
+    background-color: blue;
+    color: white;
+    margin: 5%;
+    font-family: monospace;
 }
